fixed page content overflow

--- a/app/components/App/App.scss
+++ b/app/components/App/App.scss
@@ -16,4 +16,5 @@
   flex-grow: 1;
   width: 100%;
   display: flex;
+  overflow-y: auto;
 }
